testdata/baselines/reference/submodule/compiler/jsFileCompilationDuplicateFunctionImplementationFileOrderReversed.errors.txt
error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
a.ts(1,10): error TS2393: Duplicate function implementation.


!!! error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
==== a.ts (1 errors) ====
    function foo() {
             ~~~
!!! error TS2393: Duplicate function implementation.
        return 30;
    }
    
==== b.js (0 errors) ====
    function foo() {
        return 10;
    }
    
    